--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eslint-plugin-markdown": "^4.0.1",
     "eslint-plugin-mdx": "^2.0.5",
     "eslint-plugin-monorepo": "^0.3.2",
-    "eslint-plugin-prettier": "*",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-storybook": "^0.6.8",
     "eslint-plugin-testing-library": "^5.9.1",
