--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "deepmerge": "^4.3.1",
-    "eslint": ">=8",
+    "eslint": "^8",
     "eslint-config-next": "13.1.2",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-config-turbo": "latest",
     "eslint-plugin-astro": "^0.31.4",
     "eslint-plugin-filename-rules": "^1.3.1",
@@ -39,7 +39,7 @@
     "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-monorepo": "^0.3.2",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-storybook": "^0.6.8",
     "eslint-plugin-testing-library": "^5.9.1",
     "eslint-plugin-vitest": "^0.0.19",
