--- a/package.json
+++ b/package.json
@@ -25,35 +25,36 @@
     "url": "https://github.com/we-are-singular/eslint-config/issues"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "deepmerge": "^4.3.1",
     "eslint": "^8",
-    "eslint-config-next": "13.1.2",
-    "eslint-config-prettier": "^8.10.0",
+    "@types/eslint": "^8",
+    "eslint-config-next": "15.2.4",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-config-turbo": "latest",
-    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-filename-rules": "^1.3.1",
-    "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-markdown": "^4.0.1",
-    "eslint-plugin-mdx": "^3.1.5",
+    "eslint-plugin-jest-dom": "^5.5.0",
+    "eslint-plugin-markdown": "^5.1.0",
+    "eslint-plugin-mdx": "^3.3.1",
     "eslint-plugin-monorepo": "^0.3.2",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.37.1",
-    "eslint-plugin-storybook": "^0.6.8",
-    "eslint-plugin-testing-library": "^5.9.1",
-    "eslint-plugin-vitest": "^0.0.19",
-    "eslint-plugin-vitest-globals": "^1.2.0",
-    "eslint-plugin-yml": "^1.12.2",
-    "typescript": ">=4.5"
+    "eslint-plugin-prettier": "^5.2.5",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-storybook": "^0.12.0",
+    "eslint-plugin-testing-library": "^7.1.1",
+    "eslint-plugin-vitest": "^0.5.4",
+    "eslint-plugin-vitest-globals": "^1.5.0",
+    "eslint-plugin-yml": "^1.17.0",
+    "typescript": ">=5.8"
   },
   "devDependencies": {
     "@rollup/plugin-virtual": "^3.0.2",
     "eslint": "^8.57.0",
-    "prettier": "^3.2.5",
-    "release-it": "^17.1.1",
-    "rollup": "^4.12.1",
-    "rollup-plugin-prettier": "^4.1.1"
+    "prettier": "^3.5.3",
+    "release-it": "^18.1.2",
+    "rollup": "^4.38.0",
+    "rollup-plugin-prettier": "^4.1.2"
   },
   "peerDependencies": {
     "eslint": ">=8",
