--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-turbo": "latest",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-filename-rules": "^1.3.1",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jest-dom": "^5.5.0",
     "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-mdx": "^3.6.2",
