--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "eslint-plugin-yml": "^1.18.0",
     "globals": "^16.3.0",
     "typescript": ">=5",
-    "typescript-eslint": "^8.38.0"
+    "typescript-eslint": "^8.38.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
