--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-unicorn": "^60.0.0",
     "prettier": "^3.6.2",
     "release-it": "^19.0.4",
     "rollup": "^4.46.0"
